--- a/WebApi.AntiForgery/WebApi.AntiForgery/WebApi.AntiForgery.nuspec
+++ b/WebApi.AntiForgery/WebApi.AntiForgery/WebApi.AntiForgery.nuspec
@@ -9,7 +9,7 @@
     <licenseUrl>https://github.com/Aaron-P/WebApi.AntiForgery/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/Aaron-P/WebApi.AntiForgery</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>A .NET library for generating anti-forgery tokens for web api.</description>
+    <description>$description$</description>
     <copyright>Copyright © 2016 Aaron Papp</copyright>
     <language>en-US</language>
     <tags>AntiForgery Anti-Forgery AspNetWebApi WebApi</tags>
@@ -30,13 +30,4 @@
       <dependency id="Newtonsoft.Json" version="6.0.4" />      
     </dependencies>
   </metadata>
-  <files>
-    <file src="bin\$configuration$\$targetFile$" target="lib" />
-    <!--<file src="Scripts\AntiForgery.ts" target="content\Scripts" />-->
-    <!--<file src="Scripts\AntiForgery.js" target="content\Scripts\jquery.AntiForgery.js" />-->
-    <!--<file src="Scripts\AntiForgery.min.js" target="content\Scripts\jquery.AntiForgery.min.js" />-->
-    <file src="Scripts\AntiForgery.js" target="content\Scripts" />
-    <file src="Scripts\AntiForgery.min.js" target="content\Scripts" />
-    <file src="README.txt" />
-  </files>
 </package>
