Add web.config.transform. Set jquery and typescript definitions to development dependency. Let nuget figure out the dependencies.

--- a/WebApi.AntiForgery/WebApi.AntiForgery/WebApi.AntiForgery.csproj
+++ b/WebApi.AntiForgery/WebApi.AntiForgery/WebApi.AntiForgery.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="HttpHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="web.config.transform" />
     <Content Include="README.txt" />
     <None Include="TODO.txt" />
     <Compile Include="Resource.Designer.cs">
