--- a/WebApi.AntiForgery/WebApi.AntiForgery/packages.config
+++ b/WebApi.AntiForgery/WebApi.AntiForgery/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="2.2.4" targetFramework="net45" />
-  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.0" targetFramework="net45" />
+  <package id="jQuery" version="2.2.4" targetFramework="net45" developmentDependency="true" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
